# Wiskundewijs

./: .gitignore  404.html  Logo.pptx  README.md  index.html  manage.py  mkdocs.yml  netlify.toml  pyproject.toml  pythagoras.py  requirements.txt  sitemap.xml  title.html
Derivative/: derivative.py
Pythagoras-Theorem/: pythagoras.py
Unit-Circle/: test.py  unit_circle.py
afgeleide/: index.html
basisvaardigheden/: index.html
bijles/: index.html
contact/: index.html
derivative/: index.html
docs/: afgeleide.md  basisvaardigheden.md  contact.md  credentials.json  derivative.md  goniometrie.md  index.md  kwadratische_vergelijkingen.md  ongelijkheden.md  percentages.md  pythagoras.md  statistiek.md  stelsels_van_vergelijkingen.md  unit_circle.md  urls.py  views.py
docs/javascripts/: contactInfo.js
docs/stylesheets/: extra.css
goniometrie/: index.html
index2/: index.html
javascripts/: contactInfo.js  mathjax.js
kwadratische_vergelijkingen/: index.html
media/Tex/: 0033b1842e7f199d.tex  0085c4e385f59b67.tex  00c1d0475a2ce732.tex  00f6a32675e24fdb.tex  019c01d80ca8dc43.tex  01bbd91849554f9b.tex  01e553d9bdfb34c9.tex  02694e8f091ab371.tex  02d143bde9e4b32e.tex  02fa2ef9e19a3a81.tex  032e2c67ac11dbc6.tex  0454114b043437c5.tex  050931c1c291e682.tex  05140bdae4558fa6.tex  0590dcd250398960.tex  0644300cbcd64016.tex  0651a9f78352e891.tex  06b173f90f168bac.tex  07334f8e634433f7.tex  07ba8180878d8690.tex  083d00cb1d4f571b.tex  0854289ee58823ed.tex  0934cdfc975b836e.tex  097dcd38bc3750d2.tex  09cd1b8bbe038f63.tex  09eb6cb6cae4d690.tex  0a01372259fafbfd.tex  0c3951db7abb2c64.tex  0e71d626abf6ba65.tex  0e95608b15968d8e.tex  (+325 more)
mkdocs/: CNAME  afgeleide.md  basisvaardigheden.md  bijles.md  goniometrie.md  index.md  kwadratische_vergelijkingen.md  ongelijkheden.md  oplosser.md  percentages.md  primitieve.md  primitieve_single_page.md  pythagoras.md  statistiek.md  stelsels_van_vergelijkingen.md
ongelijkheden/: index.html
oplosser/: apps.py  equation_form.html  forms.py  update_base.py  update_search.py  update_sitemap.py  views.py
percentages/: index.html
pythagoras/: index.html
search/: search_index.json
solverapp/: apps.py  forms.py  update_search.py  views.py
src/Solver/: pyproject.toml  solver.py  test.py
src/Solver/src/solver/: helper.py  math_parser.py  openai_api.py  results.py  solve.py  solve_application.py  solve_calculations.py  string_parser.py  sympy_custom_funcs.py  test.py  test_math_parser.py  test_simple.py
src/Solver/src/solver/openai_prompts/explanation/: example_answer1.txt  example_answer2.txt  example_answer3.txt  example_question1.txt  example_question2.txt  example_question3.txt  explanation_prompt.txt
src/Solver/src/solver/openai_prompts/questions/: question_answerer_prompt.txt
staticfiles/: 404.html  index.html  sitemap.xml
statistiek/: index.html
stelsels_van_vergelijkingen/: index.html
stylesheets/: bootstrap-forms.css  extra.css
unit_circle/: index.html
wiskundewijs/: asgi.py  settings.py  urls.py  wsgi.py
(+3915 files in other folders)
