[tool.poetry]
name = "wiskundewijs"
version = "0.1.0"
description = ""
authors = ["M-Serrano-Altena <Marc.Serrano.Altena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
