[tool.poetry]
name = "wiskundewijs"
version = "0.1.0"
description = ""
authors = ["M-Serrano-Altena <Marc.Serrano.Altena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.7"
pyyaml = "6.0.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
asgiref = "3.8.1"
babel = "2.15.0"
bootstrap4 = "0.1.0"
certifi = "2024.07.04"
charset-normalizer = "3.3.2"
click = "8.1.7"
cloup = "3.0.5"
colorama = "0.4.6"
contourpy = "1.2.0"
crispy-bootstrap4 = "2024.1"
cycler = "0.12.1"
decorator = "5.1.1"
distro = "1.9.0"
django-crispy-forms = "2.1"
fonttools = "4.50.0"
ghp-import = "2.1.0"
glcontext = "2.5.0"
gunicorn = "22.0.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.7"
isosurfaces = "0.1.2"
jinja2 = "3.1.4"
kiwisolver = "1.4.5"
mapbox-earcut = "1.0.1"
markdown = "3.6"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib = "3.8.3"
mdurl = "0.1.2"
mergedeep = "1.3.4"
mkdocs = "1.6.0"
mkdocs-autorefs = "1.0.1"
mkdocs-get-deps = "0.2.0"
mkdocs-material = "9.4.10"
mkdocs-material-extensions = "1.3.1"
mkdocstrings = "0.25.1"
moderngl = "5.10.0"
moderngl-window = "2.4.6"
mpmath = "1.3.0"
multipledispatch = "1.0.0"
networkx = "3.3"
numpy = "1.26.4"
openai = "1.34.0"
packaging = "24.0"
paginate = "0.5.6"
pandas = "2.2.1"
pathspec = "0.12.1"
pillow = "10.3.0"
platformdirs = "4.2.2"
plotly = "5.22.0"
pydantic = "2.7.4"
pydantic-core = "2.18.4"
pydub = "0.25.1"
pyglet = "2.0.15"
pygments = "2.17.2"
pymdown-extensions = "10.8.1"
pyparsing = "3.1.2"
pyqtgraph = "0.13.4"
pyrr = "0.10.3"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pyyaml-env-tag = "0.1"
regex = "2024.5.15"
requests = "2.32.3"
rich = "13.7.1"
scipy = "1.13.0"
screeninfo = "0.8.1"
six = "1.16.0"
skia-pathops = "0.8.0.post1"
sniffio = "1.3.1"
sqlparse = "0.5.0"
srt = "3.5.3"
svgelements = "1.9.6"
sympy = "1.12.1"
tenacity = "8.3.0"
tqdm = "4.66.4"
typing-extensions = "4.11.0"
tzdata = "2024.1"
urllib3 = "2.2.2"
watchdog = "4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
